# SPDX-License-Identifier: MIT

SUBDIRS = man

if ENABLE_API_DOC
SUBDIRS += api/libbabeltrace2
endif

if ENABLE_PYTHON_BINDINGS_DOC
SUBDIRS += bindings/python
endif

EXTRA_DIST = \
	contributing-images/bt-ref01.png \
	contributing-images/bt-ref02.png \
	contributing-images/bt-ref03.png \
	contributing-images/bt-ref04.png \
	contributing-images/bt-ref05.png \
	contributing-images/bt-ref06.png \
	contributing-images/bt-ref07.png \
	contributing-images/bt-ref08.png \
	contributing-images/bt-ref09.png \
	contributing-images/bt-ref10.png \
	contributing-images/bt-ref11.png \
	contributing-images/bt-ref12.png \
	contributing-images/bt-ref13.png
