# Core API
babeltrace2includedir = "$(includedir)/babeltrace2"
babeltrace2include_HEADERS = \
	babeltrace2/babeltrace.h \
	babeltrace2/logging.h \
	babeltrace2/property.h \
	babeltrace2/types.h \
	babeltrace2/util.h \
	babeltrace2/value-const.h \
	babeltrace2/value.h \
	babeltrace2/version.h

# Legacy API (for CTF writer)
babeltrace2ctfincludedir = "$(includedir)/babeltrace2/ctf"
babeltrace2ctfinclude_HEADERS = \
	babeltrace2/ctf/events.h

# CTF writer API
babeltrace2ctfwriterincludedir = "$(includedir)/babeltrace2/ctf-writer"
babeltrace2ctfwriterinclude_HEADERS = \
	babeltrace2/ctf-writer/clock-class.h \
	babeltrace2/ctf-writer/clock.h \
	babeltrace2/ctf-writer/event-fields.h \
	babeltrace2/ctf-writer/event-types.h \
	babeltrace2/ctf-writer/event.h \
	babeltrace2/ctf-writer/field-types.h \
	babeltrace2/ctf-writer/fields.h \
	babeltrace2/ctf-writer/object.h \
	babeltrace2/ctf-writer/stream-class.h \
	babeltrace2/ctf-writer/stream.h \
	babeltrace2/ctf-writer/trace.h \
	babeltrace2/ctf-writer/utils.h \
	babeltrace2/ctf-writer/visitor.h \
	babeltrace2/ctf-writer/writer.h

# Legacy API (for CTF writer)
babeltrace2ctfirincludedir = "$(includedir)/babeltrace2/ctf-ir"
babeltrace2ctfirinclude_HEADERS = \
	babeltrace2/ctf-ir/clock.h \
	babeltrace2/ctf-ir/event-fields.h \
	babeltrace2/ctf-ir/event-types.h \
	babeltrace2/ctf-ir/event.h \
	babeltrace2/ctf-ir/field-types.h \
	babeltrace2/ctf-ir/fields.h \
	babeltrace2/ctf-ir/stream-class.h \
	babeltrace2/ctf-ir/stream.h \
	babeltrace2/ctf-ir/trace.h \
	babeltrace2/ctf-ir/utils.h

# Trace IR API
babeltrace2traceirincludedir = "$(includedir)/babeltrace2/trace-ir"
babeltrace2traceirinclude_HEADERS = \
	babeltrace2/trace-ir/clock-class-const.h \
	babeltrace2/trace-ir/clock-class.h \
	babeltrace2/trace-ir/clock-snapshot-const.h \
	babeltrace2/trace-ir/event-class-const.h \
	babeltrace2/trace-ir/event-class.h \
	babeltrace2/trace-ir/event-const.h \
	babeltrace2/trace-ir/event.h \
	babeltrace2/trace-ir/field-class-const.h \
	babeltrace2/trace-ir/field-class.h \
	babeltrace2/trace-ir/field-path-const.h \
	babeltrace2/trace-ir/field-const.h \
	babeltrace2/trace-ir/field.h \
	babeltrace2/trace-ir/packet-const.h \
	babeltrace2/trace-ir/packet-context-field.h \
	babeltrace2/trace-ir/packet.h \
	babeltrace2/trace-ir/stream-class-const.h \
	babeltrace2/trace-ir/stream-class.h \
	babeltrace2/trace-ir/stream-const.h \
	babeltrace2/trace-ir/stream.h \
	babeltrace2/trace-ir/trace-class-const.h \
	babeltrace2/trace-ir/trace-class.h \
	babeltrace2/trace-ir/trace-const.h \
	babeltrace2/trace-ir/trace.h

# Plugin and plugin development API
babeltrace2pluginincludedir = "$(includedir)/babeltrace2/plugin"
babeltrace2plugininclude_HEADERS = \
	babeltrace2/plugin/plugin-dev.h \
	babeltrace2/plugin/plugin-const.h \
	babeltrace2/plugin/plugin-set-const.h

# Graph, component, and message API
babeltrace2graphincludedir = "$(includedir)/babeltrace2/graph"
babeltrace2graphinclude_HEADERS = \
	babeltrace2/graph/component-class-const.h \
	babeltrace2/graph/component-class-filter-const.h \
	babeltrace2/graph/component-class-filter.h \
	babeltrace2/graph/component-class-sink-const.h \
	babeltrace2/graph/component-class-sink.h \
	babeltrace2/graph/component-class-source-const.h \
	babeltrace2/graph/component-class-source.h \
	babeltrace2/graph/component-class.h \
	babeltrace2/graph/component-const.h \
	babeltrace2/graph/component-filter-const.h \
	babeltrace2/graph/component-sink-const.h \
	babeltrace2/graph/component-source-const.h \
	babeltrace2/graph/connection-const.h \
	babeltrace2/graph/graph-const.h \
	babeltrace2/graph/graph.h \
	babeltrace2/graph/message-const.h \
	babeltrace2/graph/message-discarded-events-const.h \
	babeltrace2/graph/message-discarded-events.h \
	babeltrace2/graph/message-discarded-packets-const.h \
	babeltrace2/graph/message-discarded-packets.h \
	babeltrace2/graph/message-event-const.h \
	babeltrace2/graph/message-event.h \
	babeltrace2/graph/message-message-iterator-inactivity-const.h \
	babeltrace2/graph/message-message-iterator-inactivity.h \
	babeltrace2/graph/message-iterator-const.h \
	babeltrace2/graph/message-packet-beginning-const.h \
	babeltrace2/graph/message-packet-beginning.h \
	babeltrace2/graph/message-packet-end-const.h \
	babeltrace2/graph/message-packet-end.h \
	babeltrace2/graph/message-stream-activity-beginning-const.h \
	babeltrace2/graph/message-stream-activity-beginning.h \
	babeltrace2/graph/message-stream-activity-const.h \
	babeltrace2/graph/message-stream-activity-end-const.h \
	babeltrace2/graph/message-stream-activity-end.h \
	babeltrace2/graph/message-stream-beginning-const.h \
	babeltrace2/graph/message-stream-beginning.h \
	babeltrace2/graph/message-stream-end-const.h \
	babeltrace2/graph/message-stream-end.h \
	babeltrace2/graph/port-const.h \
	babeltrace2/graph/port-input-const.h \
	babeltrace2/graph/port-output-const.h \
	babeltrace2/graph/port-output-message-iterator.h \
	babeltrace2/graph/query-executor-const.h \
	babeltrace2/graph/query-executor.h \
	babeltrace2/graph/self-component-class-filter.h \
	babeltrace2/graph/self-component-class-sink.h \
	babeltrace2/graph/self-component-class-source.h \
	babeltrace2/graph/self-component-filter.h \
	babeltrace2/graph/self-component-port-input-message-iterator.h \
	babeltrace2/graph/self-component-port-input.h \
	babeltrace2/graph/self-component-port-output.h \
	babeltrace2/graph/self-component-port.h \
	babeltrace2/graph/self-component-sink.h \
	babeltrace2/graph/self-component-source.h \
	babeltrace2/graph/self-component.h \
	babeltrace2/graph/self-message-iterator.h
