# Core API
babeltrace2includedir = "$(includedir)/babeltrace2"
babeltrace2include_HEADERS = \
	babeltrace2/babeltrace.h \
	babeltrace2/error-reporting.h \
	babeltrace2/func-status.h \
	babeltrace2/integer-range-set.h \
	babeltrace2/logging-defs.h \
	babeltrace2/logging.h \
	babeltrace2/types.h \
	babeltrace2/util.h \
	babeltrace2/value.h \
	babeltrace2/version.h

# CTF writer API
babeltrace2ctfwriterincludedir = "$(includedir)/babeltrace2-ctf-writer"
babeltrace2ctfwriterinclude_HEADERS = \
	babeltrace2-ctf-writer/clock-class.h \
	babeltrace2-ctf-writer/clock.h \
	babeltrace2-ctf-writer/event-fields.h \
	babeltrace2-ctf-writer/event-types.h \
	babeltrace2-ctf-writer/event.h \
	babeltrace2-ctf-writer/field-types.h \
	babeltrace2-ctf-writer/fields.h \
	babeltrace2-ctf-writer/object.h \
	babeltrace2-ctf-writer/stream-class.h \
	babeltrace2-ctf-writer/stream.h \
	babeltrace2-ctf-writer/trace.h \
	babeltrace2-ctf-writer/types.h \
	babeltrace2-ctf-writer/utils.h \
	babeltrace2-ctf-writer/visitor.h \
	babeltrace2-ctf-writer/writer.h

# Trace IR API
babeltrace2traceirincludedir = "$(includedir)/babeltrace2/trace-ir"
babeltrace2traceirinclude_HEADERS = \
	babeltrace2/trace-ir/clock-class.h \
	babeltrace2/trace-ir/clock-snapshot.h \
	babeltrace2/trace-ir/event-class.h \
	babeltrace2/trace-ir/event.h \
	babeltrace2/trace-ir/field-class.h \
	babeltrace2/trace-ir/field-path.h \
	babeltrace2/trace-ir/field.h \
	babeltrace2/trace-ir/packet.h \
	babeltrace2/trace-ir/stream-class.h \
	babeltrace2/trace-ir/stream.h \
	babeltrace2/trace-ir/trace-class.h \
	babeltrace2/trace-ir/trace.h

# Plugin and plugin development API
babeltrace2pluginincludedir = "$(includedir)/babeltrace2/plugin"
babeltrace2plugininclude_HEADERS = \
	babeltrace2/plugin/plugin-dev.h \
	babeltrace2/plugin/plugin-loading.h

# Graph, component, and message API
babeltrace2graphincludedir = "$(includedir)/babeltrace2/graph"
babeltrace2graphinclude_HEADERS = \
	babeltrace2/graph/component-class-dev.h \
	babeltrace2/graph/component-class.h \
	babeltrace2/graph/component-descriptor-set.h \
	babeltrace2/graph/component.h \
	babeltrace2/graph/connection.h \
	babeltrace2/graph/graph.h \
	babeltrace2/graph/interrupter.h \
	babeltrace2/graph/message-iterator-class.h \
	babeltrace2/graph/message-iterator.h \
	babeltrace2/graph/message.h \
	babeltrace2/graph/port.h \
	babeltrace2/graph/private-query-executor.h \
	babeltrace2/graph/query-executor.h \
	babeltrace2/graph/self-component-class.h \
	babeltrace2/graph/self-component-port.h \
	babeltrace2/graph/self-component.h \
	babeltrace2/graph/self-message-iterator.h
